# react-boilerplate-ts

./: .dockerignore  .env  .env.docker.example  .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  DESIGN.md  Dockerfile  PRODUCT.md  README.md  components.json  docker-compose.yml  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsup.config.ts  vite.config.ts  vitest.config.ts
.impeccable/: design.json
.playwright-mcp/: page-2026-05-07T03-33-24-745Z.yml  page-2026-05-07T03-33-37-014Z.yml  page-2026-05-07T03-33-54-325Z.yml  page-2026-05-07T03-34-08-141Z.yml  page-2026-05-07T03-34-17-471Z.yml  page-2026-05-07T03-37-33-443Z.yml  page-2026-05-07T03-37-52-264Z.yml  page-2026-05-07T03-38-04-633Z.yml  page-2026-05-07T03-38-10-158Z.yml  page-2026-05-07T03-38-26-983Z.yml  page-2026-05-07T03-38-35-610Z.yml  page-2026-05-07T03-38-41-489Z.yml  page-2026-05-07T03-39-37-613Z.yml  page-2026-05-07T03-39-45-108Z.yml
.storybook/: main.ts  preview.tsx  vitest.setup.ts
coverage/: coverage-final.json  coverage-summary.json  index.html
docker/: nginx.conf
docs/: FEATURES.md  topic.md
scripts/: disable-pnp.cjs  docker-deploy.bat  docker-deploy.sh  docker-up.sh  pick-commit.ts
specs/: auth-feature.testplan.md  auth.testplan.md
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
storybook-static/: iframe.html  index.html  index.json  (+3 more)
(+477 files in other folders)
